# terminal-interpreter

./: .envrc  .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  dev-config.json.example
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
interpreter/: Cargo.toml
interpreter/prompts/: default_system.md
interpreter/src/: cli.rs  config.rs  init_tui.rs  install.rs  lib.rs  llm_client.rs  main.rs  model_list.rs  shell.rs
interpreter/src/prompts/: default_system.md
interpreter/tests/: eval.rs
shell/: interpreter.bash  interpreter.fish  interpreter.zsh
