[package]
name = "interpreter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Turn a shell command line into an executable shell command via an LLM."

[lib]
name = "interpreter"
path = "src/lib.rs"

[[bin]]
name = "interpreter"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
cursive = { version = "0.21", default-features = false, features = ["crossterm-backend"] }
directories = "5"
llm = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json", "tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
